--- a/ptrace/Makefile
+++ b/ptrace/Makefile
@@ -1,3 +1,4 @@
 
 any:
 	gcc -Wall -Wextra -Wno-unused-parameter -O -g main.c  -o systrace
+	gcc -Wall -Wextra -Wno-unused-parameter -O -g main2.c trace.c  -o systrace2
