--- a/siphash/Makefile
+++ b/siphash/Makefile
@@ -1,3 +1,3 @@
 
 all:
-	gcc -O3 csiphash2.c main.c -g -Wall -Wextra -Wno-unused-parameter -o siphashtest && ./siphashtest
+	gcc -O3 csiphash.c main.c -g -Wall -Wextra -Wno-unused-parameter -o siphashtest && ./siphashtest
