--- a/arduino/leds/Makefile
+++ b/arduino/leds/Makefile
@@ -2,7 +2,12 @@ USER_LIB_PATH=$(HOME)/arduino
 
 ARDUINO_DIR = $(HOME)/arduino/arduino-1.0.5
 
+
+#TARGET       = lilypad
+#BOARD_TAG    = lilypad328
+
 BOARD_TAG    = nano328
+
 ARDUINO_PORT = /dev/ttyUSB0
 
 ARDUINO_LIBS = Wire Wire/utility Adafruit_NeoPixel
