--- a/against-unix/Makefile
+++ b/against-unix/Makefile
@@ -3,8 +3,8 @@
 run:
 	gcc -O3 fatal.c -o fatal
 	gcc -O3 client.c -o client
-	(./fatal 256 1021 &);
-	@sleep 10
+	(ulimit -n 1024; ./fatal 512 1021 &);
+	@sleep 4
 	./client
-	kill `pidof fatal`
+	kill `pgrep fatal`
 
