--- a/visualising-siphash/Makefile
+++ b/visualising-siphash/Makefile
@@ -1,7 +1,7 @@
-CFLAGS=-Wall -Wextra -Wno-unused-parameter -msse2 -msse3 -msse4 -msse4.1 -msse4.2 -mavx -mmmx -g -O3 -funroll-loops
+CFLAGS=-Wall -Wextra -Wno-unused-parameter -g -O3 -funroll-loops
 
 #CC=gcc -mtune=corei7-avx -march=corei7-avx
-CC=clang -mtune=native -mcpu=native -march=corei7
+CC=clang -mtune=native -march=native -msse2 -msse3 -msse4 -msse4.1 -msse4.2 -mavx -mmmx
 
 
 xxx:
