--- a/dropping-packets/Makefile
+++ b/dropping-packets/Makefile
@@ -23,3 +23,11 @@ ebpf-drop:
 .PHONY: busypoll-loop
 busypoll-loop:
 	gcc -Wall -Wextra -O2 busypoll-loop.c -o busypoll-loop
+
+.PHONY: xdp-drop-ebpf.o
+xdp-drop-ebpf.o: xdp-drop-ebpf.c
+	clang -Wall -Wextra \
+		-O2 -emit-llvm \
+		-c $(subst .o,.c,$@) -S -o - \
+	| llc -march=bpf -filetype=obj -o $@
+
